    shoes:
      activesupport
      concurrent-ruby
      i18n
      multi_json
      picky
      rack_fast_escape
      thread_safe
      tzinfo
      url_escape
      yajl-ruby
  * Chipmunk and Sqlite are now gems, maintained by others. Shoes
    no longer has exts and the pseudo gems: ftsearch, chipmunk, sqlite3, hpricot.
  * Major restucturing of C source code. 
    Less monolithic, more files but smaller files.
  * rake files cleaned up, slightly. Still confusing.

=== Fixed with 3.3.3
  * redirects of http to https - common now a days, a WIP
    https://github.com/Shoes3/shoes3/issues/304
  * allow some Shoes built in dialogs like ask, confirm, ...
    to be used before Shoes.app is called.
    https://github.com/Shoes3/shoes3/issues/303
  * gifs are working on Windows again
    https://github.com/Shoes3/shoes3/issues/306


  
-------------- Shoes 3.3.2 ----------------------------------

=== New with 3.3.2
  * Ruby is updated to 2.2.6 (windows still uses 2.2.4)
  * gems is updated to 2.6.8
  * Profiler with both a GUI and the more traditional text report.
    Written in Shoes and Ruby so you can modify it if you like. 
    https://github.com/Shoes3/shoes3/issues/232
    https://github.com/Shoes3/shoes3/wiki/Profiling
    
  * Shoes.show_console is now Shoes.terminal with many options for size, and
    colors. It can handle some common escape sequences (colors and bolding)  
    On Windows:
      Use Msys>  cshoes.exe
      or install one of those ANSI dll things for your DOS era console. 
      Rumor: Win 10 does support ansi escape sequences on it's console.
      Sometimes Win7 does ok with some escape sequence. 
    On OSX - scrollbars might not show up. page up/down keys and home/end
      and scroll wheel do work.
    Useful for running unit tests of Shoes and other terminal stuff like the
    profiler text report.
    Note: raspbian may have font issues for 'monospace' font.
    https://github.com/Shoes3/shoes3/issues/236