@@ -36,11 +36,13 @@
       yajl-ruby
   * Chipmunk and Sqlite are now gems, maintained by others. Shoes
     no longer has exts and the pseudo gems: ftsearch, chipmunk, sqlite3, hpricot.
-  * Major restucturing of C source code. 
+  ** Major restucturing of C source code. 
     Less monolithic, more files but smaller files.
+    https://github.com/Shoes3/shoes3/issues/333
   * rake files cleaned up, slightly. Still confusing.
 
 === Fixed with 3.3.3
+  * Restored Windows Theme for - slows startup, sigh.
   * redirects of http to https - common now a days, a WIP
     https://github.com/Shoes3/shoes3/issues/304
   * allow some Shoes built in dialogs like ask, confirm, ...
